# home-server

./: .gitignore  Cargo.toml  README.md
db/: finance_schema.sql  studies_schema.sql
deploy/: home-server.service
src/: auth.rs  config.rs  error.rs  main.rs  state.rs
src/apps/: mod.rs
src/apps/files/: handlers.rs  mod.rs  model.rs
src/apps/finance/: db.rs  handlers.rs  mod.rs  model.rs  schedule.rs
src/apps/studies/: db.rs  handlers.rs  mod.rs  model.rs
static/: app.js  index.html  style.css
static/files/: app.js  index.html  style.css
static/finance/: app.js  index.html  style.css
static/studies/: app.js  index.html  style.css
