[package]
name = "home-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "home-server"
path = "src/main.rs"

[profile.release]
# Smaller/faster binaries matter more on a Pi than on a beefy dev box.
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# --- web framework / async runtime ---
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit", "timeout"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- config ---
config = { version = "0.14", default-features = false, features = ["toml"] }

# --- logging / diagnostics ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- errors ---
anyhow = "1"
thiserror = "1"

# --- misc utilities used by the file app ---
mime_guess = "2"

[dev-dependencies]
tempfile = "3"

# Pinned because newer releases require the edition2024 Cargo feature,
# which needs a newer toolchain than may be installed via distro packages.
# Safe to remove/relax this once you're on rustc 1.85+ (rustup install stable).
indexmap = "=2.2.6"
